[package]
name = "blockworld"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.28"
wgpu = "0.17"
cgmath = "0.18"
bytemuck = { version = "1.14", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
noise = "0.8"
image = "0.23"
pollster = "0.3"
rand = "0.8.5"
rayon = "=1.10.0"
rayon-core = "=1.12.1"
rodio = { version = "=0.15.0", default-features = false, features = ["wav"] }
coreaudio-sys = "=0.2.15"
